--- a/styles/style.css
+++ b/styles/style.css
@@ -68,9 +68,17 @@ h1{
     flex-wrap: wrap;
     flex-direction: row;
     text-align: center;
-    margin: 0 200px;
+    max-width: 600px;
+    margin: 0 auto;
 }
-
+.text-sub{
+    display: flex;
+    flex-wrap:wrap ;
+    flex-direction: row;
+    text-align: center;
+    max-width: 600px;
+    margin: 0 auto;
+}
 /*footer*/
 footer{
     padding-top:40px ;
